src/main/metadata/objects/External_Key__c.object
<CustomObject>
    <description>External Key</description>
    <fields>
        <fullName>CIAM_Customer_Id__c</fullName>
        <label>CIAM Customer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIAM_Customer_email__c</fullName>
        <externalId>true</externalId>
        <label>CIAM Customer email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the customer</description>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account, Person Account Manual Merge, Person Account Soft Deleted</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Key</relationshipLabel>
        <relationshipName>External_Key</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Vehicle</description>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>External Key</relationshipLabel>
        <relationshipName>External_Key</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>External Key</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Vehicle__c</columns>
        <columns>CIAM_Customer_email__c</columns>
        <columns>CIAM_Customer_Id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>External Key Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Key</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>